Update dependencies and Java project version
- Bump project's java version from Temurin 25+36 to Temurin 25.0.1+8
- Bump JavaFX from 25 to 25.0.1
- Bump Jackson Databind from 2.20.0 to 3.0.3